@@ -1,13 +1,21 @@
 <% @authors.each do |author| %>
   
-  <article class="category" id="author_<%=author.id%>">
+  <article class="author" id="author_<%=author.id%>">
     <header>
-      <% if author.has_image? %>
-        <%= image_tag(author.attachments.first.image.small, :class => "show_item_image") %>
+      <% if author.avatar? %>
+        <%= link_to(image_tag(author.avatar.small, :class => "show_item_image"), author_path(author)) %>
       <% end %>
-      <h3><%= link_to author.name, author_path(author) %></h3>
+      <h3><%= link_to author.title, author_path(author) %></h3>
     </header>
     <section>
+      <% unless author.twitter.to_s.empty? %>
+        <p>Twitter: <%= twitter_user_link(author.twitter) %></p>
+      <% end %>
+      <% unless author.diaspora.to_s.empty? %>
+        <p>Diaspora: <%= author.diaspora %></p>
+      <% end %>
+      <p>Articles: <%= author.items.count %></p>
+      <br />
       <%= author.bio %>
     </section>
   </article>
