@@ -66,6 +66,8 @@
         <% end %>
       </ul>
       
+      
+      <a href="https://mixpanel.com/f/partner"><img src="https://mixpanel.com/site_media/images/partner/badge_light.png" alt="Mobile and Web Analytics" /></a>
     </div>
     
   </div>
