@@ -14,6 +14,13 @@ describe ItemsController do
     it "routes to #show" do
       get("/items/1").should route_to("items#show", :id => "1")
     end
+    
+    it "routes to #index.rss" do
+      get("/rss").should route_to("items#index", :format => "rss")
+    end
+    it "routes to #index.atom" do
+      get("/atom").should route_to("items#index", :format => "atom")
+    end
 
     # it "routes to #edit" do
     #   get("/items/1/edit").should route_to("items#edit", :id => "1")
